# arbiqwen

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: cli.py  config.py  main.py
backend/app/agents/: __init__.py  _runtime.py  loop.py  memory.py  models.py  routes.py  runner.py  schemas.py  service.py  tools.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  models.py  routes.py  schemas.py
backend/app/chat/: __init__.py  models.py  retrieval.py  routes.py  schemas.py  service.py
backend/app/dashboards/: __init__.py  models.py  routes.py  schemas.py
backend/app/database/: connection.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 0001_auth_tables.py  0002_documents.py  0003_rag_sources.py  0004_chat.py  0005_projects.py  0006_agents.py  0007_skills.py  0008_playbooks.py  0009_dashboards.py  0010_integrations.py  0011_oauth_tokens.py  0012_project_config.py  0013_agent_model_split.py  0014_agent_checkpoint.py  0015_agent_memory.py
backend/app/documents/: __init__.py  chunking.py  indexing.py  models.py  routes.py  schemas.py  storage.py
backend/app/documents/processors/: __init__.py  csv.py  docx.py  pdf.py  pptx.py  registry.py  txt.py  xlsx.py
backend/app/embeddings/: __init__.py  provider.py
backend/app/integrations/: __init__.py  marketplace.py  models.py  oauth_models.py  oauth_routes.py  plane_client.py  routes.py  schemas.py
backend/app/llm/: __init__.py  provider.py
backend/app/playbooks/: __init__.py  models.py  routes.py  schemas.py
backend/app/projects/: __init__.py  models.py  routes.py  schemas.py
backend/app/qdrant/: __init__.py  collection.py  connection.py
backend/app/rag_sources/: __init__.py  models.py  routes.py  schemas.py
backend/app/reranker/: __init__.py  provider.py
backend/app/seed_profiles/: __init__.py  demo.py
backend/app/services/: __init__.py  base.py
backend/app/shared/: __init__.py  deps.py  errors.py  logging.py  pagination.py  rate_limit.py
backend/app/skills/: __init__.py  models.py  registry.py  routes.py  schemas.py
backend/tests/: conftest.py  test_agent_checkpoint.py  test_agent_checkpoint_api.py  test_agent_loop.py  test_agent_memory.py  test_agent_runs_api.py  test_agent_tools_plane.py  test_agent_tools_rag.py  test_api_artifact_content.py  test_api_auth.py  test_api_chat.py  test_api_document_authz.py  test_api_document_file.py  test_api_documents.py  test_api_integrations.py  test_api_project_config.py  test_api_rag_sources.py  test_api_workspace.py  test_security.py  test_smoke.py  test_unit_agent_runtime.py  test_unit_auth.py  test_unit_config_llm.py  test_unit_documents.py  test_unit_llm_adapter.py  test_unit_rag.py
deploy/: .env.prod.example  DEPLOY.md  docker-compose.prod.yml  nginx.conf  web.Dockerfile
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
web/src/: App.css  App.tsx  config.ts  demo-data.ts  main.tsx  mappers.ts  session.ts  useSections.ts  viewModels.ts
web/src/agents/: agentTemplates.ts
(+57 files in other folders)
