[project]
name = "arbi-backend"
version = "0.1.0"
description = "Arbi Python Backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",    # PostgreSQL async driver — production default
  "aiosqlite>=0.19",  # SQLite async driver — one-off scripts
  "greenlet>=3.0",    # required by SQLAlchemy async
  "python-json-logger>=2.0",
  "bcrypt>=4.0,<5",
  "python-jose[cryptography]>=3.3",
  "email-validator>=2.0",
]

[tool.uv]
package = false
