[project]
name = "arbi-backend"
version = "0.1.0"
description = "Arbi Python Backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",    # PostgreSQL async driver — production default
  "aiosqlite>=0.19",  # SQLite async driver — one-off scripts
  "greenlet>=3.0",    # required by SQLAlchemy async
  "python-json-logger>=2.0",
  "bcrypt>=4.0,<5",
  "PyJWT>=2.8",
  "email-validator>=2.0",
  "anthropic>=0.40",
  "qdrant-client>=1.7.0",
  "openai>=1.0",
  "sentence-transformers>=2.2",
  "pypdf>=4.0",
  "python-docx>=1.0",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1",
  "aiofiles>=23",
  "python-multipart>=0.0.6",
  "slowapi>=0.1.9",
]

[dependency-groups]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
dev = [
  "ruff>=0.6",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[tool.bandit]
# Migrations and tests are not part of the served attack surface.
exclude_dirs = ["tests", "app/database/migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",   # line length is handled by the formatter
  "B008",   # FastAPI's Depends()/Query() in argument defaults is idiomatic
  "B905",   # zip() without strict= is fine here
  "UP046",  # keep Generic[T] base for the pydantic paginated model
]

[tool.ruff.lint.per-file-ignores]
# main.py calls setup_logging() before the rest of the imports on purpose.
"app/main.py" = ["E402"]
# Migrations import models for metadata side effects; conftest imports for create_all.
"app/database/migrations/**" = ["E402", "F401"]
"tests/conftest.py" = ["E402"]

[tool.uv]
package = false
